@@ -6,18 +6,18 @@
        url         = "http://www.monodevelop.com"
        description = "C/C++ Language binding"
        category    = "Language bindings"
-       version     = "2.1.0">
+       version     = "2.1.1">
 
 	<Dependencies>
-		<Addin id = "Core" version = "2.1.0"/>
-		<Addin id = "Core.Gui" version = "2.1.0"/>
-		<Addin id = "Projects" version = "2.1.0"/>
-		<Addin id = "Projects.Gui" version = "2.1.0"/>
-		<Addin id = "Ide" version = "2.1.0"/>
-		<Addin id = "Components" version = "2.1.0"/>
-		<Addin id = "Deployment" version = "2.1.0"/>
-		<Addin id = "Deployment.Linux" version = "2.1.0"/>
-		<Addin id = "SourceEditor2" version = "2.1.0" />
+		<Addin id = "Core" version = "2.1.1"/>
+		<Addin id = "Core.Gui" version = "2.1.1"/>
+		<Addin id = "Projects" version = "2.1.1"/>
+		<Addin id = "Projects.Gui" version = "2.1.1"/>
+		<Addin id = "Ide" version = "2.1.1"/>
+		<Addin id = "Components" version = "2.1.1"/>
+		<Addin id = "Deployment" version = "2.1.1"/>
+		<Addin id = "Deployment.Linux" version = "2.1.1"/>
+		<Addin id = "SourceEditor2" version = "2.1.1" />
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Core/StockIcons">
@@ -226,7 +226,7 @@
 	    </Runtime>
 	    
 		<Dependencies>
-			<Addin id = "MonoDevelop.Autotools" version = "2.1.0"/>
+			<Addin id = "MonoDevelop.Autotools" version = "2.1.1"/>
 		</Dependencies>
 		
 		<Extension path = "/Autotools/SimpleSetups">
