@@ -1,3 +1,8 @@
+2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AssemblyInfo.cs:
+	* CBinding.addin.xml: Bump MD version.
+
 2009-10-02  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Makefile.am:
